@@ -5,4 +5,3 @@ fix nullpointerexception
 autorun in favourites
 fix problems in /commands (/raw nick change)
 finish the parser (who replies)
-show channel modes somewhere in the user interface
